src/objects/test__c.object
<CustomObject>
    <fields>
        <fullName>Diz_precent__c</fullName>
        <description>Hey)
Hello)</description>
        <inlineHelpText>Hey)
Hello)</inlineHelpText>
        <label>Diz_precent__c</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>a__c</fullName>
        <defaultValue>false</defaultValue>
        <label>a</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>b__c</fullName>
        <label>b</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_currency__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_currency__c</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>diz_mail__c</fullName>
        <description>test@test.test</description>
        <inlineHelpText>test@test.test</inlineHelpText>
        <label>diz_mail__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>diz_number__c</fullName>
        <label>diz_number__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_picklistX__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_picklist_X__c</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>123</fullName>
                </value>
                <value>
                    <fullName>asdas</fullName>
                </value>
                <value>
                    <fullName>xdzcz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>frml__c</fullName>
        <formula>2</formula>
        <label>frml</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>p1__c</fullName>
        <description>test</description>
        <label>p1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>p__c</fullName>
        <label>p</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pickl__c</fullName>
        <label>pickl</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>text1__c</fullName>
        <description>test</description>
        <label>text1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <description>test</description>
        <label>text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>test2</label>
    <nameField>
        <label>test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>